# filen-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/filen/: __init__.py  _base.py  _client.py  _context.py  _controller.py  _helpers.py  _log.py  _logging.py  _version.py  config.py  errors.py  runners.py
src/filen/api/: __init__.py  _api.py  _auth.py  _base.py  _dir.py  _facade.py  _filen.py  _user.py
src/filen/api/models/: auth.py  base.py  dir.py  user.py
src/filen/api/v3/: __init__.py  _auth.py  _base.py  _dir.py  _download.py  _file.py  _upload.py  _user.py
src/filen/api/v3/models/: __init__.py  auth.py  base.py  dir.py  file.py  link.py  user.py
src/filen/crypto/: __init__.py  _base.py  _content.py  _hash.py  _key.py  _keypair.py  _masterkey.py  _metadata.py  _utils.py
src/filen/repo/: __init__.py  _account.py  _auth.py  _base.py  _client.py  _dir.py  _download.py  _fs.py  _link.py  _lock.py  _storage.py  _upload.py  _user.py  models.py
tests/: conftest.py  test_crypto.py  test_filen.py  test_runners.py
tests/integration_tests/: conftest.py  test_fs.py
