[project]
name = "filen"
version = "0.1.0"
description = "Filen client for Python"
readme = "README.md"
authors = [
    { name = "Evgeny Prilepin", email = "esp.home@gmail.com" }
]

requires-python = ">=3.12"

dependencies = [
    "cryptography>=46.0.3",
    "anyio>=4.11.0",
    "httpx>=0.28.1",
    "pydantic[email]>=2.12.4",
    "pydantic-settings (>=2.12.0,<3.0.0)",
]


[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"


[dependency-groups]
dev = [
    "ruff>=0.14.4",
    "poethepoet>=0.37.0",
    "pre-commit>=4.4.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "passlib>=1.7.4",
    "devtools>=0.12.2",
]


[tool.pytest.ini_options]
markers = [
    "integration: real integration tests, Filen account and authentication info required."
]
addopts = "-m 'not integration'"

asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"


[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    ".ruff_cache",
    ".cache",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",       # All pycodestyle errors
    "W",       # All pycodestyle warnings
    "F",       # All Pyflakes errors
    "A",       # All flake8-builtins
    "Q",       # Quotes
    "I",       # Sort imports
    "T201",    # print found
    "T203",    # pprint found
]
ignore = [
    "A003"     # Python builtin is shadowed by method
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.isort]
force-to-top = ["typing"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "single"


[tool.poe.tasks]
check-fmt = "ruff format . --check"
check-lint = "ruff check ."
check = ["check-fmt", "check-lint"]

fix-fmt = "ruff format ."
fix-lint = "ruff check --fix ."
fix = ["fix-fmt", "fix-lint"]

test = "pytest -sv ."
test-cov = "pytest -sv --cov=filen ."
